# aprg_sandbox

./: GitCommands.txt  GitNotes.txt  README.md
AprgAlgorithm/AprgAlgorithm/: CMakeLists.txt
AprgAlgorithm/AprgAlgorithm/cmake/: FilesAndDirectories.cmake
AprgAlgorithm/AprgAlgorithm/tst/: AlbaGrepStringEvaluator_unit.cpp  AlbaLargeSorterProfiling_unit.cpp  AlbaLargeSorter_unit.cpp  AlbaRandomizer_unit.cpp  BinarySearch_unit.cpp  ExpressionEvaluator_unit.cpp  QuineMcCluskey_unit.cpp  StatisticsDataSample_unit.cpp  StatisticsDataStatistics_unit.cpp  StatisticsFrequencyStatistics_unit.cpp  UnionFind_unit.cpp
AprgAudioManipulator/AprgAudioManipulator/: CMakeLists.txt
AprgAudioManipulator/AprgAudioManipulator/cmake/: FilesAndDirectories.cmake
AprgAudioManipulator/AprgAudioManipulator/main/: main.cpp
AprgAudioManipulator/AprgAudioManipulator/src/: AprgAudioManipulator.cpp  AprgAudioManipulator.hpp
AprgAudioManipulator/AprgAudioManipulator/tst/: AprgAudioManipulator_unit.cpp
AprgBitmap/AprgBitmap/: CMakeLists.txt
AprgBitmap/AprgBitmap/cmake/: FilesAndDirectories.cmake
AprgBitmap/AprgBitmap/src/: AprgBitmap.cpp  AprgBitmap.hpp  AprgBitmapConfiguration.cpp  AprgBitmapConfiguration.hpp  AprgBitmapSnippet.cpp  AprgBitmapSnippet.hpp  CommonTypes.hpp  SOOSA.c  main.cpp
AprgBitmap/AprgBitmap/tst/: AprgBitmapReadTest_unit.cpp  AprgBitmapWriteTest_unit.cpp  AprgBitmap_unit.cpp
AprgBitmapFilters/AprgBitmapFilters/: CMakeLists.txt
AprgBitmapFilters/AprgBitmapFilters/cmake/: FilesAndDirectories.cmake
AprgBitmapFilters/AprgBitmapFilters/src/: AnimizeColor.cpp  AnimizeColor.hpp  AprgBitmapFilters.cpp  AprgBitmapFilters.hpp  AprgColorStatistics.cpp  AprgColorStatistics.hpp  AprgColorUtilities.cpp  AprgColorUtilities.hpp  PixelInformation.cpp  PixelInformation.hpp  PixelInformationDatabase.cpp  PixelInformationDatabase.hpp
AprgBitmapFilters/AprgBitmapFilters/tst/: AnimizeColor_unit.cpp  AprgBitmapFilters_unit.cpp  AprgColorStatistics_unit.cpp  AprgColorUtilities_unit.cpp
AprgCMakeHelpers/: CMakeLists.txt  CommonDefinitions.cmake  CommonDependencies.cmake  CommonFlags.cmake  FileAndDirectoryMacros.cmake  GccFlags.cmake  LastStep.cmake  MsvcFlags.cmake
AprgCMakeHelpers/cmake/: Macros.cmake
AprgCommon/AprgCommon/: CMakeLists.txt
AprgCommon/AprgCommon/cmake/: AprgCommonSources.cmake  FilesAndDirectories.cmake
AprgCommon/AprgCommon/src/: AlbaFileReader.cpp  AlbaFileReader.hpp  AlbaIteratorHelper.cpp  AlbaIteratorHelper.hpp  AlbaMemoryBuffer.cpp  AlbaMemoryBuffer.hpp  AlbaOptional.hpp  AlbaRaiiafPointer.hpp  AlbaRandomizer.cpp  AlbaRandomizer.hpp  AlbaStringHelper.cpp  AlbaStringHelper.hpp  AlbaTableDisplay.cpp  AlbaUserInterface.cpp  AlbaUserInterface.hpp  AlbaWindowsTimer.cpp
AprgCommon/AprgCommon/tst/: AlbaBitManipulation_unit.cpp  AlbaContainerHelper_unit.cpp  AlbaDisplayTable_unit.cpp  AlbaFileReader_unit.cpp  AlbaLargeSorter_unit.cpp  AlbaMacroArgumentCounter_unit.cpp  AlbaMacros_unit.cpp  AlbaMemoryBuffer_unit.cpp  AlbaOptional_unit.cpp  AlbaPathHandler_unit.cpp  AlbaRaiiafPointer_unit.cpp  AlbaRandomizer_unit.cpp  AlbaStringHelper_unit.cpp  AlbaTableDisplay_unit.cpp  AlbaUserAutomation_unit.cpp  AlbaWindowsTimer_unit.cpp  AlbaWindowsUserAutomation_unit.cpp  AlbaXY_unit.cpp  DirectoryConstants.hpp
AprgEquation/AprgEquation/: CMakeLists.txt
AprgEquation/AprgEquation/cmake/: FilesAndDirectories.cmake
AprgEquation/AprgEquation/src/: AccumulateOperations.hpp  AdditionAndSubtractionOfTermsOverTerms.cpp  AdditionAndSubtractionOfTermsOverTerms.hpp  BaseTerm.cpp  BaseTerm.hpp  BaseTermData.hpp  BaseTermPointers.hpp  BrentMethod.cpp  BrentMethod.hpp  Constant.cpp  Constant.hpp  Expression.cpp  Expression.hpp  Factorization.cpp  Factorization.hpp  MergeExpressionsByAdditionOrSubtraction.cpp  MergeExpressionsByAdditionOrSubtraction.hpp  Monomial.cpp  Monomial.hpp  Operator.cpp  Operator.hpp  OperatorLevel.hpp  PerformOperation.cpp  PerformOperation.hpp  PerformOperations.cpp  PerformOperations.hpp  Polynomial.cpp  Polynomial.hpp  PolynomialOverPolynomial.cpp  PolynomialOverPolynomial.hpp  SubstitutionOfVariablesToValues.cpp  SubstitutionOfVariablesToValues.hpp  Term.cpp  Term.hpp  TermOperators.cpp  TermOperators.hpp  TermType.hpp  TermsAggregator.cpp  TermsAggregator.hpp  TermsOverTerms.cpp  (+13 more)
AprgEquation/AprgEquation/tst/: AccumulateOperations_unit.cpp  AdditionAndSubtractionOfTermsOverTerms_unit.cpp  BaseTermData_unit.cpp  BaseTerm_unit.cpp  ComboTests_unit.cpp  Constant_unit.cpp  Expression_unit.cpp  Factorization_unit.cpp  MergeExpressionsByAdditionOrSubtraction_unit.cpp  Monomial_unit.cpp  Operator_unit.cpp  PerformOperation_unit.cpp  PerformOperations_unit.cpp  PolynomialFactorization_unit.cpp  PolynomialOverPolynomial_unit.cpp  Polynomial_unit.cpp  SubstitutionOfVariablesToValues_unit.cpp  TermOperators_unit.cpp  Term_unit.cpp  (+7 more)
AprgFileExtractor/AprgFileExtractor/: CMakeLists.txt
AprgGeometry/AprgGeometry/: CMakeLists.txt
AprgGnuPlot/AprgGnuPlot/: CMakeLists.txt
AprgGraph/AprgGraph/: CMakeLists.txt
AprgGrepStringEvaluator/AprgGrepStringEvaluator/: CMakeLists.txt
AprgGsl/AprgGsl/: CMakeLists.txt
AprgProcessFiles/AprgProcessFiles/: CMakeLists.txt
AprgUserAutomation/AprgUserAutomation/: CMakeLists.txt
AprgWebCrawler/AprgWebCrawler/: CMakeLists.txt  CMakeLists.txt.user.cc60605
Boost/Boost/: BoostGuide.txt  BoostGuideInWindows.txt  CMakeLists.txt
BtsLogAnalyzer/BtsLogAnalyzer/: CMakeLists.txt
ConvertPlmnIdToMccMnc/ConvertPlmnIdToMccMnc/: CMakeLists.txt
CrnccIdMapping/CrnccIdMapping/: CMakeLists.txt
Cube36/Cube36/: CMakeLists.txt
CurlCpp/CurlCpp/: CMakeLists.txt  CMakeLists.txt.user.22a137b
DMeasTimerStack/DMeasTimerStack/: CMakeLists.txt
DesignDocumentCreator/DesignDocumentCreator/: CMakeLists.txt
DesignDocumentCreator/DesignDocumentCreatorAutomation/: CMakeLists.txt
DesignPatterns/JakubVojvoda/: CMakeLists.txt
FileDestructor/FileDestructor/: CMakeLists.txt
GnuplotIostream/GnuplotIostream/: CMakeLists.txt
HeartTee/HeartTee/: CMakeLists.txt
LrmDssWcdmaLteLoadMonitoring/LrmDssWcdmaLteLoadMonitoring/: CMakeLists.txt
(+4837 files in other folders)
